# ModelMatch

./: .env.template  .env_template  .gitignore  LICENSE  README.md  pyproject.toml
data/: example_data.json
model_match/: main.py
model_match/core/: runner.py
model_match/evaluation/: base_eval.py
model_match/models/: base.py
model_match/models/providers/: openai.py
modelmatch/: config.py  evaluation_prompt.txt  logging_config.py  main.py  model_config.yaml
modelmatch/core/: runner.py
modelmatch/evaluation/: __init__.py  human.py  reasoning.py
modelmatch/models/: __init__.py
modelmatch/models/providers/: google.py  open_router.py  openai.py
modelmatch/utils/: helper.py
