[project]
name = "ModelMatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Tasheer Hussain"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-genai (>=1.11.0,<2.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
