[project]
name = "ModelMatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Tasheer Hussain"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-genai (>=1.11.0,<2.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[project.scripts]
# Define your command-line script name here (e.g., 'modelmatch')
# and point it to your main function: 'package_name.module_name:function_name'
# Option A: If your source code folder is 'modelmatch/'
modelmatch = "modelmatch.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
